# datalake-query-db-consumer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  log_config.yaml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: check.yaml
src/bloomberg/datalake/datalakequerydbconsumer/: __init__.py  __main__.py  _data_models.py  _db_accessor.py  _kafka.py
tests/: _utils.py  query_complete_event.json  query_complete_event_no_sources.json  query_complete_event_output_sources.json
tests/integration/: __init__.py  _kafka.py  test_consumer.py  test_db_accessor.py
topics/: topics.yml
