[metadata]
name = bloomberg.datalake.datalakequerydbconsumer
description = Service that consumes datalake metadata from kafka stream and saves it into a database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bbgithub.dev.bloomberg.com/datalake-opensource/datalakequerydbconsumer
maintainer = Cristian Osiac
maintainer_email = mosiac@bloomberg.net
license = Apache-2.0
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
keywords = bloomberg, Bloomberg, datalake

[options]
packages = find_namespace:
install_requires =
    confluent_kafka
    python-dateutil
    pyyaml
    sqlalchemy
    tenacity
python_requires = >=3.9
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[sdist]
formats = gztar
